src/main/java/at/jku/cps/travart/core/formats/afm/parser/AFMParser.java
package at.jku.cps.travart.core.formats.afm.parser;

// Generated from src/main/java/at/jku/cps/travart/core/formats/afm/parser/AFM.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AFMParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, ADD=15, SUB=16, MULT=17, 
		DIV=18, MOD=19, POW=20, ASIG=21, ABS=22, MAX=23, MIN=24, COS=25, SIN=26, 
		SUM=27, AND=28, OR=29, NOT=30, IFF=31, IMPLIES=32, REQUIRES=33, EXCLUDES=34, 
		HIGHER_THAN=35, LOWER_THAN=36, HIGHER_EQUAL_THAN=37, LOWER_EQUAL_THAN=38, 
		EQUAL=39, DISTINCT=40, INTEGER=41, WORD=42, INT=43, DOUBLE=44, STRING=45, 
		SPACE=46, WS=47;
	public static final int
		RULE_feature_model = 0, RULE_relationships_block = 1, RULE_relationship_spec = 2, 
		RULE_init_spec = 3, RULE_cardinality = 4, RULE_cardinal_spec = 5, RULE_obligatory_spec = 6, 
		RULE_optional_spec = 7, RULE_non_cardinal_spec = 8, RULE_attributes_block = 9, 
		RULE_attribute_spec = 10, RULE_attribute_name = 11, RULE_attribute_domain = 12, 
		RULE_discrete_domain_spec = 13, RULE_range_domain_spec = 14, RULE_domain_range = 15, 
		RULE_attribute_default_value = 16, RULE_attribute_null_value = 17, RULE_value_spec = 18, 
		RULE_constraints_block = 19, RULE_constraint_spec = 20, RULE_brackets_spec = 21, 
		RULE_simple_spec = 22, RULE_expression = 23, RULE_error_expression = 24, 
		RULE_logical_operator = 25, RULE_arithmetic_operator = 26, RULE_relational_operator = 27, 
		RULE_number = 28, RULE_variable = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"feature_model", "relationships_block", "relationship_spec", "init_spec", 
			"cardinality", "cardinal_spec", "obligatory_spec", "optional_spec", "non_cardinal_spec", 
			"attributes_block", "attribute_spec", "attribute_name", "attribute_domain", 
			"discrete_domain_spec", "range_domain_spec", "domain_range", "attribute_default_value", 
			"attribute_null_value", "value_spec", "constraints_block", "constraint_spec", 
			"brackets_spec", "simple_spec", "expression", "error_expression", "logical_operator", 
			"arithmetic_operator", "relational_operator", "number", "variable"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'%Relationships'", "';'", "':'", "'['", "','", "']'", "'{'", "'}'", 
			"'%Attributes'", "'.'", "'to'", "'%Constraints'", "'('", "')'", "'+'", 
			"'-'", "'*'", "'/'", "'%'", "'^'", "'='", "'abs'", "'max'", "'min'", 
			"'cos'", "'sin'", "'sum'", "'AND'", "'OR'", "'NOT'", "'IFF'", "'IMPLIES'", 
			"'REQUIRES'", "'EXCLUDES'", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", 
			"'Integer'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "ADD", "SUB", "MULT", "DIV", "MOD", "POW", "ASIG", 
			"ABS", "MAX", "MIN", "COS", "SIN", "SUM", "AND", "OR", "NOT", "IFF", 
			"IMPLIES", "REQUIRES", "EXCLUDES", "HIGHER_THAN", "LOWER_THAN", "HIGHER_EQUAL_THAN", 
			"LOWER_EQUAL_THAN", "EQUAL", "DISTINCT", "INTEGER", "WORD", "INT", "DOUBLE", 
			"STRING", "SPACE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AFM.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AFMParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Feature_modelContext extends ParserRuleContext {
		public Relationships_blockContext relationships_block() {
			return getRuleContext(Relationships_blockContext.class,0);
		}
		public Attributes_blockContext attributes_block() {
			return getRuleContext(Attributes_blockContext.class,0);
		}
		public Constraints_blockContext constraints_block() {
			return getRuleContext(Constraints_blockContext.class,0);
		}
		public Feature_modelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_feature_model; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AFMListener ) ((AFMListener)listener).enterFeature_model(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AFMListener ) ((AFMListener)listener).exitFeature_model(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AFMVisitor ) return ((AFMVisitor<? extends T>)visitor).visitFeature_model(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Feature_modelContext feature_model() throws RecognitionException {
		Feature_modelContext _localctx = new Feature_modelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_feature_model);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			relationships_block();
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(61);
				attributes_block();
				}
			}

			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__11) {
				{
				setState(64);
				constraints_block();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Relationships_blockContext extends ParserRuleContext {
		public List<Relationship_specContext> relationship_spec() {
			return getRuleContexts(Relationship_specContext.class);
		}
		public Relationship_specContext relationship_spec(int i) {
			return getRuleContext(Relationship_specContext.class,i);
		}
		public Relationships_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relationships_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AFMListener ) ((AFMListener)listener).enterRelationships_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AFMListener ) ((AFMListener)listener).exitRelationships_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AFMVisitor ) return ((AFMVisitor<? extends T>)visitor).visitRelationships_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Relationships_blockContext relationships_block() throws RecognitionException {
		Relationships_blockContext _localctx = new Relationships_blockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_relationships_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(T__0);
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WORD || _la==SPACE) {
				{
				{
				setState(68);
				relationship_spec();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Relationship_specContext extends ParserRuleContext {
		public Init_specContext init_spec() {
			return getRuleContext(Init_specContext.class,0);
		}
		public List<Non_cardinal_specContext> non_cardinal_spec() {
			return getRuleContexts(Non_cardinal_specContext.class);
		}
		public Non_cardinal_specContext non_cardinal_spec(int i) {
			return getRuleContext(Non_cardinal_specContext.class,i);
		}
		public List<Cardinal_specContext> cardinal_spec() {
			return getRuleContexts(Cardinal_specContext.class);
		}
		public Cardinal_specContext cardinal_spec(int i) {
			return getRuleContext(Cardinal_specContext.class,i);
		}
		public Relationship_specContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relationship_spec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AFMListener ) ((AFMListener)listener).enterRelationship_spec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AFMListener ) ((AFMListener)listener).exitRelationship_spec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AFMVisitor ) return ((AFMVisitor<? extends T>)visitor).visitRelationship_spec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Relationship_specContext relationship_spec() throws RecognitionException {
		Relationship_specContext _localctx = new Relationship_specContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_relationship_spec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			init_spec();
			setState(77); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(77);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(75);
					non_cardinal_spec();
					}
					break;
				case 2:
					{
					setState(76);
					cardinal_spec();
					}
					break;
				}
				}
				setState(79); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << WORD) | (1L << SPACE))) != 0) );
			setState(81);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Init_specContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(AFMParser.WORD, 0); }
		public List<TerminalNode> SPACE() { return getTokens(AFMParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(AFMParser.SPACE, i);
		}
		public Init_specContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init_spec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AFMListener ) ((AFMListener)listener).enterInit_spec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AFMListener ) ((AFMListener)listener).exitInit_spec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AFMVisitor ) return ((AFMVisitor<? extends T>)visitor).visitInit_spec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Init_specContext init_spec() throws RecognitionException {
		Init_specContext _localctx = new Init_specContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_init_spec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(83);
				match(SPACE);
				}
			}

			setState(86);
			match(WORD);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(87);
				match(SPACE);
				}
			}

			setState(90);
			match(T__2);
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(91);
				match(SPACE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CardinalityContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(AFMParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(AFMParser.INT, i);
		}
		public CardinalityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cardinality; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AFMListener ) ((AFMListener)listener).enterCardinality(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AFMListener ) ((AFMListener)listener).exitCardinality(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AFMVisitor ) return ((AFMVisitor<? extends T>)visitor).visitCardinality(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CardinalityContext cardinality() throws RecognitionException {
		CardinalityContext _localctx = new CardinalityContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cardinality);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(T__3);
			setState(95);
			match(INT);
			setState(96);
			match(T__4);
			setState(97);
			match(INT);
			setState(98);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cardinal_specContext extends ParserRuleContext {
		public CardinalityContext cardinality() {
			return getRuleContext(CardinalityContext.class,0);
		}
		public List<TerminalNode> SPACE() { return getTokens(AFMParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(AFMParser.SPACE, i);
		}
		public List<Obligatory_specContext> obligatory_spec() {
			return getRuleContexts(Obligatory_specContext.class);
		}
		public Obligatory_specContext obligatory_spec(int i) {
			return getRuleContext(Obligatory_specContext.class,i);
		}
		public Cardinal_specContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cardinal_spec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AFMListener ) ((AFMListener)listener).enterCardinal_spec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AFMListener ) ((AFMListener)listener).exitCardinal_spec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AFMVisitor ) return ((AFMVisitor<? extends T>)visitor).visitCardinal_spec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cardinal_specContext cardinal_spec() throws RecognitionException {
		Cardinal_specContext _localctx = new Cardinal_specContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cardinal_spec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(100);
				match(SPACE);
				}
			}

			setState(103);
			cardinality();
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(104);
				match(SPACE);
				}
			}

			setState(107);
			match(T__6);
			setState(109); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(108);
				obligatory_spec();
				}
				}
				setState(111); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WORD || _la==SPACE );
			setState(113);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Obligatory_specContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(AFMParser.WORD, 0); }
		public List<TerminalNode> SPACE() { return getTokens(AFMParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(AFMParser.SPACE, i);
		}
		public Obligatory_specContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_obligatory_spec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AFMListener ) ((AFMListener)listener).enterObligatory_spec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AFMListener ) ((AFMListener)listener).exitObligatory_spec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AFMVisitor ) return ((AFMVisitor<? extends T>)visitor).visitObligatory_spec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Obligatory_specContext obligatory_spec() throws RecognitionException {
		Obligatory_specContext _localctx = new Obligatory_specContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_obligatory_spec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(115);
				match(SPACE);
				}
			}

			setState(118);
			match(WORD);
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(119);
				match(SPACE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Optional_specContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(AFMParser.WORD, 0); }
		public List<TerminalNode> SPACE() { return getTokens(AFMParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(AFMParser.SPACE, i);
		}
		public Optional_specContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optional_spec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AFMListener ) ((AFMListener)listener).enterOptional_spec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AFMListener ) ((AFMListener)listener).exitOptional_spec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AFMVisitor ) return ((AFMVisitor<? extends T>)visitor).visitOptional_spec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Optional_specContext optional_spec() throws RecognitionException {
		Optional_specContext _localctx = new Optional_specContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_optional_spec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(122);
				match(SPACE);
				}
			}

			setState(125);
			match(T__3);
			setState(126);
			match(WORD);
			setState(127);
			match(T__5);
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				{
				setState(128);
				match(SPACE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Non_cardinal_specContext extends ParserRuleContext {
		public Obligatory_specContext obligatory_spec() {
			return getRuleContext(Obligatory_specContext.class,0);
		}
		public Optional_specContext optional_spec() {
			return getRuleContext(Optional_specContext.class,0);
		}
		public Non_cardinal_specContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_non_cardinal_spec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AFMListener ) ((AFMListener)listener).enterNon_cardinal_spec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AFMListener ) ((AFMListener)listener).exitNon_cardinal_spec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AFMVisitor ) return ((AFMVisitor<? extends T>)visitor).visitNon_cardinal_spec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Non_cardinal_specContext non_cardinal_spec() throws RecognitionException {
		Non_cardinal_specContext _localctx = new Non_cardinal_specContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_non_cardinal_spec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				{
				setState(131);
				obligatory_spec();
				}
				break;
			case 2:
				{
				setState(132);
				optional_spec();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Attributes_blockContext extends ParserRuleContext {
		public List<Attribute_specContext> attribute_spec() {
			return getRuleContexts(Attribute_specContext.class);
		}
		public Attribute_specContext attribute_spec(int i) {
			return getRuleContext(Attribute_specContext.class,i);
		}
		public Attributes_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributes_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AFMListener ) ((AFMListener)listener).enterAttributes_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AFMListener ) ((AFMListener)listener).exitAttributes_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AFMVisitor ) return ((AFMVisitor<? extends T>)visitor).visitAttributes_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Attributes_blockContext attributes_block() throws RecognitionException {
		Attributes_blockContext _localctx = new Attributes_blockContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_attributes_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(T__8);
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WORD) {
				{
				{
				setState(136);
				attribute_spec();
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Attribute_specContext extends ParserRuleContext {
		public Attribute_nameContext attribute_name() {
			return getRuleContext(Attribute_nameContext.class,0);
		}
		public Attribute_domainContext attribute_domain() {
			return getRuleContext(Attribute_domainContext.class,0);
		}
		public Attribute_default_valueContext attribute_default_value() {
			return getRuleContext(Attribute_default_valueContext.class,0);
		}
		public Attribute_null_valueContext attribute_null_value() {
			return getRuleContext(Attribute_null_valueContext.class,0);
		}
		public List<TerminalNode> SPACE() { return getTokens(AFMParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(AFMParser.SPACE, i);
		}
		public Attribute_specContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute_spec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AFMListener ) ((AFMListener)listener).enterAttribute_spec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AFMListener ) ((AFMListener)listener).exitAttribute_spec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AFMVisitor ) return ((AFMVisitor<? extends T>)visitor).visitAttribute_spec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Attribute_specContext attribute_spec() throws RecognitionException {
		Attribute_specContext _localctx = new Attribute_specContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_attribute_spec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			attribute_name();
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(143);
				match(SPACE);
				}
			}

			setState(146);
			match(T__2);
			setState(148);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				{
				setState(147);
				match(SPACE);
				}
				break;
			}
			setState(150);
			attribute_domain();
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(151);
				match(SPACE);
				}
			}

			setState(154);
			match(T__4);
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(155);
				match(SPACE);
				}
			}

			setState(158);
			attribute_default_value();
			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(159);
				match(SPACE);
				}
			}

			setState(162);
			match(T__4);
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(163);
				match(SPACE);
				}
			}

			setState(166);
			attribute_null_value();
			setState(167);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
